Harden the inbound directory synchronization
A deletion undone within the grace window no longer removes live entries, renames of sidecars with a paired PDF keep the entry instances, an editor polled mid-write only stages the entries instead of dropping them, and events arriving during shutdown are discarded instead of failing the shared monitor thread. Sidecar precedence is deterministic; the baseline snapshot runs off the caller's thread.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Vr3E1Gg5DRU4LQDDVnhPys